# ProstPilot

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  package-lock.json  package.json  pytest.ini
.devcontainer/: devcontainer.json
apps/party_planner/: package.json  tsconfig.json
backend/: pyproject.toml
backend/catalog/migrations/: 0001_initial.py  0002_alter_container_name_alter_drinkcategory_name_and_more.py  0003_remove_size_unique_container_volume_and_more.py
backend/catalog/models/: __init__.py  container.py  drinks.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/recipes/migrations/: 0001_initial.py
backend/recipes/models/: __init__.py  recipe.py
backend/requirements/: base.txt
backend/shopping/migrations/: 0001_initial.py  0002_alter_historicalpackaging_type_alter_packaging_type.py
backend/shopping/models/: __init__.py  beverage.py  prices.py
frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx
