[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prostpilot"
version = "0.1.0"
description = "Django backend for the ProstPilot project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=6.0,<7.0",
    "GeneralManager>=0.24.2",
    "django-simple-history>=3.4",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.2.1",
    "mypy>=1.8",
    "django-stubs>=4.2",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
warn_unused_configs = true
ignore_missing_imports = false
strict_optional = true
check_untyped_defs = true
mypy_path = ["backend"]

[[tool.mypy.overrides]]
module = [
    "general_manager",
    "general_manager.*",
    "simple_history",
    "simple_history.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"
